# illumina

./: .gitignore  CMakeLists.txt  README.md  build-app.sh  bytecode_test.txt  grammar.cf  main.c  package-lock.json  package.json  requirements.txt  test_code.lux
.github/workflows/: docs.yml
app/: jsconfig.json  package-lock.json  package.json  tsconfig.json  volar.config.js  vue.config.js
app/public/: index.html
app/src/: App.vue  main.ts  shims-vuex.d.ts
app/src/assets/scripts/editor/: extensions.ts  highlight.ts  mirror.ts  theme.ts
app/src/assets/scripts/integration/: CodeActionHandler.ts
app/src/assets/scripts/language/compiler/parser/: parser.ts
app/src/assets/scripts/parser/: parser.ts
app/src/assets/scripts/util/: platform.ts  state.ts
app/src/assets/styles/: din-font.css  fira-font.css  global.css
app/src/components/: EditorHeader.vue  EditorMirror.vue  EditorSidebar.vue  IconButton.vue
app/src/views/: EditorView.vue
backend/: .gitignore
backend/templates/: index.html
docs/: Makefile  conf.py  illumina_style.py  index.rst  installation.rst  introduction.rst
docs/backend/: asm_format.rst
docs/tutorial/: basic.rst  classes.rst  control.rst  functions.rst  generics.rst
src/: CMakeLists.txt  allocation.h  args.h  frame.c  frame.h  main.c  opcode.h  primitives.c  primitives.h  specs.h  stackfuncs.c  stackfuncs.h  type.h
src/common/: debug.h  logging.h  specs.h
src/common/prelude/: prelude_type_path.h
src/common/util/: assert.h  generic_array.h  generic_structs.h  io_string.c  io_string.h  math.h  stream.c  stream.h  struct_util.c  struct_util.h
src/compiler/: CMakeLists.txt  compiler_state.c  compiler_state.h
src/compiler/parsing/: AST.c  AST.h  file_parser.c  file_parser.h  op_lit.h  preprocessing.c  preprocessing.h
src/runtime/: CMakeLists.txt  literal_def.c  specs.h  types.h  vm.c  vm.h  vm_error.c  vm_error.h
src/runtime/bytecode/: bytefuncs.c  bytefuncs.h  opcodes.h
src/runtime/loader/: file_loader.c  file_loader.h  fileloader.h
src/runtime/memory/: allocation.h  heap.c  heap.h
src/runtime/object/: primitives.c  primitives.h  type.h
src/runtime/reference/: literals.h  specs.h
src/runtime/session/: symbol_table.c  symbol_table.h
src/runtime/struct/: frame.c  frame.h  thread.c  thread.h
src/runtime/structure/: const_pool.c  const_pool.h  link_table.c  link_table.h  name_table.c  name_table.h  object_file.h
src/runtime/util/: builtin_array.c  builtin_array.h
test/: CMakeLists.txt  cases.c  cases.h  parse_test.c  parse_test.h
test/sample_code/: simple.lux
